# Duino_API

./: .env.example  .gitignore  Duino_API_Colab.ipynb  README.md  install_python_stack.py  pyproject.toml  requirements-inference.txt  requirements.txt
docker/: Dockerfile  docker-compose.yml
duino_api/: __init__.py  config.py
duino_api/adapters/: __init__.py  detector.py
duino_api/auth/: __init__.py  keys.py  quota.py
duino_api/cli/: __init__.py  main.py
duino_api/gateway/: __init__.py  app.py
duino_api/inference/: __init__.py  engine.py
duino_api/sessions/: __init__.py  manager.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/layout/: AppSidebar.tsx  RootLayout.tsx
frontend/src/pages/: APIKeysPage.tsx  ModelsPage.tsx
notebooks/: colab_quickstart.py  universal_quickstart.py
studio/: __init__.py  auto_push.py  install_prebuilt.py  monitor.py  setup.bat  setup.ps1  setup.sh
studio/backend/: __init__.py  colab.py
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.jsx  App.tsx  index.css
ui/src/pages/: APIKeysPage.jsx  APIKeysPage.tsx  ModelsPage.tsx
